shesmu-server/src/test/resources/bad/cycle2.shesmu
Input gsi_std;

Define standard_execution()
  broken();

Define broken()
  standard_execution();
